# simple-calculator

./: .coverage  .gitignore  Makefile  README.md  calcu.desktop  pyproject.toml  setup.py
calcu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: calcu.1
src/calcu/: main.py  ui.py
src/simple_calculator/: calculator.py  main.py  post_install.py  ui.py
src/simple_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/simple_calculator/assets/: simple-calculator.desktop
test/: test_calculator.py
