[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-calculator"
version = "1.0.1"
description = "A simple calculator with GUI and CLI"
authors = [{name="Your Name"}]
requires-python = ">=3.8"
exclude = ["build"]

[project.scripts]
simple-calculator = "simple_calculator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
